src/App.module.css
body {
  background-color: #282c34;
}

h4 {
  margin-top: 5px;
  margin-bottom: 0;
}

p {
  margin: 2px;
}

.page {
  height: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
}

.container {
  min-height: 100%;
  display: flex;
  flex-flow: column;
  justify-content: center;
  align-content: center;
}

.title {
  text-align: center;
  font-size: 30px;
  color: white;
}

.chatBox {
  width: 500px;
  height: 500px;
  margin: 20px;
  background-color: white;
  border-radius: 10px;
  padding: 10px 15px;
  display: flex;
  flex-flow: column nowrap;
  overflow-y: scroll;
  position: block;
}

.chatBox::-webkit-scrollbar {
  display: none;
}

.console {
  width: 250px;
  height: 200px;
  margin: 20px;
  background-color: white;
  border-radius: 10px;
  padding: 10px 15px;
  display: flex;
  flex-flow: column nowrap;
  overflow-y: scroll;
  position: block;
}

.console::-webkit-scrollbar {
  display: none;
}

